...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:padding="4dp">
                    <Button
                        android:id="@+id/appointmentcard"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:text="Create Appointment"
                        android:textSize="@dimen/textsize"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:drawableStart="@drawable/ic_event" />
                </LinearLayout>
...
